--- a/src/main/resources/static/review-template.css
+++ b/src/main/resources/static/review-template.css
@@ -3,6 +3,24 @@ img{
   height: auto;
 }
 
-background{
-  color: blue;
+h1{
+  margin: 0px
 }
+
+
+body{
+  text-align: center;
+  margin: 0px;
+  height: 100vh;
+  background-color: #3C58BF;
+  border-top: 0px;
+  border-left: 40px solid #DDE0EE;
+  border-right:40px solid #DDE0EE;
+  border-bottom: 40px solid #DDE0EE;
+}
+
+table{
+    margin-left:auto; 
+    margin-right:auto;
+  }
+ 
