fully working project!

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -2,6 +2,7 @@
 
 
 <head>
+<link rel="stylesheet" href="/categories.css">
  <html xmlns:th="http://www.thymeleaf.org">
 </head>
 
@@ -12,10 +13,8 @@
     </header>
 
     <main th:each="category: ${categories}">
-        <ul>
-            <li >
             <a th:href="@{/category(id=${category.id})}" th:text="${category.name}"></a>
-             </li>
+           
         </ul>
     </main>
 
