--- a/src/main/resources/static/categories.css
+++ b/src/main/resources/static/categories.css
@@ -1,13 +1,3 @@
-img{
-  width: 500px;
-  height: auto;
-}
-
-h1{
-  margin: 0px
-}
-
-
 body{
   text-align: center;
   margin: 0px;
@@ -17,13 +7,37 @@ body{
   border-left: 40px solid #DDE0EE;
   border-right:40px solid #DDE0EE;
   border-bottom: 40px solid #DDE0EE;
-  color:white;
+  color: white;
 }
 
- 
- 
- 
- footer{
+
+h1{
+margin:0px
+
+}
+
+
+a{
+
+  text-decoration: none;
+  font-size: 40px;
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    width: 100%;
+
+}
+
+a:hover{
+  color:blue;
+}
+
+
+
+footer{
   position: absolute;
   bottom: 0;
   width: 100%;
