--- a/src/main/resources/static/category.css
+++ b/src/main/resources/static/category.css
@@ -1,13 +1,3 @@
-img{
-  width: 500px;
-  height: auto;
-}
-
-h1{
-  margin: 0px
-}
-
-
 body{
   text-align: center;
   margin: 0px;
@@ -17,15 +7,38 @@ body{
   border-left: 40px solid #DDE0EE;
   border-right:40px solid #DDE0EE;
   border-bottom: 40px solid #DDE0EE;
-  color:white;
+  color: white;
 }
 
- 
- 
- 
- footer{
+
+h1{
+margin:0px;
+padding-bottom: 10%; 
+}
+
+
+
+
+a{
+  	text-decoration: none;
+  	font-size: 40px;
+ 	margin:auto;
+ 	
+}
+
+a:hover{
+  color:blue;
+}
+
+
+
+footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;            /* Footer height */
+  height: 2.5rem;   
+}
+
+#back{
+
 }
