--- a/src/main/resources/static/review-template.css
+++ b/src/main/resources/static/review-template.css
@@ -17,10 +17,15 @@ body{
   border-left: 40px solid #DDE0EE;
   border-right:40px solid #DDE0EE;
   border-bottom: 40px solid #DDE0EE;
+  color:white;
 }
 
-table{
-    margin-left:auto; 
-    margin-right:auto;
-  }
  
+ 
+ 
+ footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
