--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:each = "review: ${reviews}">
-	<title th:text="${review.title}">A Review</title>
+<link rel="stylesheet" href="/review-template.css">
+	<title th:text="${review.title}"></title>
 </head>
 <body>
 
@@ -11,6 +12,7 @@
 
 	<main th:each = "review: ${reviews}">
 		<p th:text="${review.title}"></p>
+		<img th:src="${review.urlImage}" />
 		<p th:text="${review.description}"></p>
 	</main>
 
